--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,19 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: The Stratford
-  id: the-stratford
-  location: Stratford, London
-  description: London skyline views and high style at a new Stratford spot
-  price: 135
-  price-description: per room per night
-  saved: 47
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90114/892f7996_3f3e_4a5d_8b1b_40cd2eeb8ed2.jpg
-  link: https://www.secretescapes.com/the-stratford-stratford-london/sale
-  sale-id: 90114
-  domestic: true
-
 - title: Vintry & Mercer
   id: vintry-and-mercer
   location: The City, London
@@ -22,34 +9,21 @@
   price: 179
   price-description: per room per night
   saved: 45
-  expires: 2019/05/29
+  expires: 2019/06/04
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88790/e2367453_a7ff_495d_85d0_b39f995764b9.jpg
   link: https://www.secretescapes.com/vintry-and-mercer-the-city-london/sale
   sale-id: 93680
   domestic: true
 
-- title: The Principal Edinburgh George Street
-  id: the-principal-edinburgh-george-street
-  location: Edinburgh, Scotland
-  description: A plush Edinburgh stay at a landmark hotel on an iconic street
-  price: 185
-  price-description: per room per night
-  saved: 46
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81659/5a772eb6_5214_4753_a3dd_03874291acb1.jpg
-  link: https://www.secretescapes.com/the-principal-edinburgh-george-street-edinburgh-scotland/sale
-  sale-id: 93828
-  domestic: true
-
 - title: Merchants Manor
   id: merchants-manor
   location: Falmouth, Cornwall
-  description: An adults-only Falmouth spa and foodie stay in a former merchant’s home
+  description: <div>An adults-only Falmouth spa and foodie stay in a former merchant’s home</div>
   price: 75
   price-description: per room per night
   saved: 41
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/46254/17c208c4_b48f_48b9_9504_cfe35cca90d2.jpg
+  expires: 2019/06/04
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62172/3ac0ad1a_94b1_4bd9_8ac2_8aca5c3aa21a.jpg
   link: https://www.secretescapes.com/merchants-manor-falmouth-cornwall/sale
   sale-id: 94467
   domestic: true
@@ -61,7 +35,7 @@
   price: 180
   price-description: per room per night
   saved: 41
-  expires: 2019/05/29
+  expires: 2019/06/04
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73424/255605c3_3009_4ab7_9a0b_3769f1659c0d.jpg
   link: https://www.secretescapes.com/the-principal-york-york-yorkshire/sale
   sale-id: 94517
@@ -74,23 +48,10 @@
   price: 119
   price-description: per room per night
   saved: 46
-  expires: 2019/05/29
+  expires: 2019/06/04
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90421/17f607ef_43de_4f44_9a95_2800914ce45c.jpg
   link: https://www.secretescapes.com/the-majestic-hotel-harrogate-north-yorkshire/sale
   sale-id: 94581
-  domestic: true
-
-- title: The Gannet Inn
-  id: the-gannet-inn
-  location: Carbis Bay, Cornwall
-  description: Run away to a boutique Cornwall pad near a Blue Flag beach
-  price: 149
-  price-description: per room per night
-  saved: 61
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73907/7bca90cf_ec5d_4e72_afc4_5d8750cf04cb.jpg
-  link: https://www.secretescapes.com/the-gannet-inn-carbis-bay-cornwall-uk-sale/sale
-  sale-id: 93754
   domestic: true
 
 - title: The Ampersand Hotel
@@ -100,8 +61,8 @@
   price: 199
   price-description: per room per night
   saved: 45
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94720/5fe64f55_c6f6_4142_9a53_0fc28cf1948b.jpg
+  expires: 2019/06/04
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94720/18cb899f_9595_4515_825f_7917662480e1.jpg
   link: https://www.secretescapes.com/the-ampersand-hotel-south-kensington-london/sale
   sale-id: 94720
   domestic: true
@@ -126,7 +87,7 @@
   price: 149
   price-description: per room per night
   saved: 46
-  expires: 2019/05/29
+  expires: 2019/05/31
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80044/abc32c68_aa46_491d_97ec_0fcc17bd70fe.jpg
   link: https://www.secretescapes.com/mottram-hall-mottram-st-andrew-cheshire/sale
   sale-id: 94524
@@ -139,7 +100,7 @@
   price: 369
   price-description: per room per night
   saved: 37
-  expires: 2019/05/29
+  expires: 2019/06/04
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52114/f5dca7f1_1f1c_455f_9771_f98c9ad750a1.jpg
   link: https://www.secretescapes.com/treehouse-hotel-port-lympne-hotel-and-reserve-kent/sale
   sale-id: 94737
@@ -152,7 +113,7 @@
   price: 625
   price-description: per room per night
   saved: 30
-  expires: 2019/05/29
+  expires: 2019/06/04
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/77245/e8f853c1_a791_4532_aac0_b59d4bf6b9d0.jpg
   link: https://www.secretescapes.com/lympstone-manor-exmouth-devon-uk/sale
   sale-id: 94344
@@ -165,7 +126,7 @@
   price: 188
   price-description: per room per night
   saved: 35
-  expires: 2019/05/29
+  expires: 2019/05/31
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91853/0b7bb3f6_8d56_4f8d_85d1_f39a1831b1b7.jpg
   link: https://www.secretescapes.com/south-place-hotel-the-city-london/sale
   sale-id: 94740
@@ -214,32 +175,6 @@
 # NON DOMESTIC OFFERS
 ################################################################################
 
-- title: Portals Hills Boutique Hotel
-  id: portals-hills-boutique-hotel
-  location: Mallorca, Spain
-  description: Watch kaleidoscopic Mallorcan sunsets from a chic five-star pad
-  price: 170
-  price-description: per suite per night
-  saved: 42
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
-  link: https://www.secretescapes.com/portals-hills-boutique-hotel-mallorca-portals-nous-spain/sale
-  sale-id: 93893
-  domestic: false
-
-- title: H10 Casa de la Plata
-  id: h10-casa-de-la-plata
-  location: Seville, Spain
-  description: Discover Seville's history and culture from a brand-new base
-  price: 73
-  price-description: per room per night
-  saved: 44
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94159/1bb36bfb_5f56_42cb_b8c6_d16e7460ed4c.jpg
-  link: https://www.secretescapes.com/h10-casa-de-la-plata-sevilla-spain/sale
-  sale-id: 94159
-  domestic: false
-
 - title: Club Maspalomas Suites & Spa
   id: club-maspalomas-suites-and-spa
   location: Gran Canaria, Spain, Canary Islands
@@ -247,7 +182,7 @@
   price: 111
   price-description: per suite per night
   saved: 29
-  expires: 2019/05/28
+  expires: 2019/06/03
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/82821/cb58c3db_64b2_4488_9e78_9178d1cee41d.jpg
   link: https://www.secretescapes.com/club-maspalomas-suites-and-spa-gran-canaria-spain-canary-islands/sale
   sale-id: 94249
@@ -260,49 +195,10 @@
   price: 183
   price-description: per villa per night
   saved: 32
-  expires: 2019/05/28
+  expires: 2019/06/03
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/77942/d9d8f8f0_0a44_41c1_ace8_002959cb2d72.jpg
   link: https://www.secretescapes.com/bahiazul-villas-and-club-fuerteventura-canary-islands/sale
   sale-id: 93891
-  domestic: false
-
-- title: Hotel Gala
-  id: hotel-gala
-  location: Tenerife, Spain
-  description: Tan yourself in Tenerife at a modern Playa de las Américas beach hotel
-  price: 106
-  price-description: per room per night
-  saved: 29
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93907/ec1c52c2_c6ef_4b77_92f3_0ec36e9c9843.jpg
-  link: https://www.secretescapes.com/hotel-gala-tenerife-spain/sale
-  sale-id: 93907
-  domestic: false
-
-- title: H10 Tindaya
-  id: h10-tindaya
-  location: Fuerteventura, Spain
-  description: Kick back at a Spanish-inspired resort on the shores of Sotavento Beach
-  price: 111
-  price-description: per room per night
-  saved: 45
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94244/a3b4e9a9_f8cd_4715_8433_312b981ea454.jpg
-  link: https://www.secretescapes.com/h10-tindaya-fuerteventura-spain/sale
-  sale-id: 94244
-  domestic: false
-
-- title: Arbatax Park Resort & Spa - Suites del Mare
-  id: arbatax-park-resort-and-spa---suites-del-mare
-  location: Sardinia, Italy
-  description: A tranquil and inviting Sardinia suite stay near the sea
-  price: 376
-  price-description: per suite per night
-  saved: 63
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73726/545a1fd3_c529_4877_8184_fa60b4f0e927.jpg
-  link: https://www.secretescapes.com/arbatax-park-resort-and-spa-suites-del-mare-sardinia-italy/sale
-  sale-id: 94519
   domestic: false
 
 - title: GPRO Valparaiso Palace Hotel & Spa
@@ -347,7 +243,7 @@
 - title: Seaside Los Jameos Playa
   id: seaside-los-jameos-playa
   location: Lanzarote, Canary Islands
-  description: Retreat to a sun-soaked Lanzarote hotel with tropical gardens
+  description: <div>Retreat to a sun-soaked Lanzarote hotel with tropical gardens</div>
   price: 112
   price-description: per room per night
   saved: 27
@@ -396,26 +292,26 @@
   sale-id: 95177
   domestic: false
 
-- title: Château Monfort
-  location: Milan, Italy
-  description: Feel plush at an opulent, five-star Milan hotel with fairy-tale interiors
-  price: 74
+- title: Hotel Gala
+  location: Tenerife, Spain
+  description: Tan yourself in Tenerife at a modern Playa de las Américas beach hotel
+  price: 53
   price-description: per person. Based on 2 people per room per night
-  saved: 45
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
-  link: https://www.secretescapes.com/chateau-monfort-milan-italy123/sale
-  sale-id: 93672
+  saved: 29
+  expires: 2019/06/03
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/93907/98fdfe8d_bfef_4fd8_8011_04a11b8f7e83.jpg?auto=format,compress
+  link: https://www.secretescapes.com/hotel-gala-tenerife-spain/sale
+  sale-id: 93907
   domestic: false
 
-- title: H10 Palacio Colomera
-  location: Córdoba, Spain
-  description: A sleek new Córdoba hotel with pool and roof terrace in a historic palace
-  price: 36
+- title: H10 Tindaya
+  location: Fuerteventura, Spain
+  description: Kick back at a Spanish-inspired resort on the shores of Sotavento Beach
+  price: 56
   price-description: per person. Based on 2 people per room per night
-  saved: 36
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93925/2284ae36_fbc7_4540_a8e5_baa5f06c064e.jpg
-  link: https://www.secretescapes.com/h10-palacio-colomera-cordoba-spain/sale
-  sale-id: 93925
+  saved: 45
+  expires: 2019/06/03
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/94244/a3b4e9a9_f8cd_4715_8433_312b981ea454.jpg?auto=format,compress
+  link: https://www.secretescapes.com/h10-tindaya-fuerteventura-spain/sale
+  sale-id: 94244
   domestic: false
