--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,32 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Château Monfort
-  id: château-monfort
-  location: Milano, Lombardia
-  description: Soggiorno incantato nel centro di Milano in un 5* da favola
-  price: 172
-  price-description: per camera per notte
-  saved: 45
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
-  link: https://it.secretescapes.com/chateau-monfort-milano-lombardia-italia/sale
-  sale-id: 93672
-  domestic: true
-
-- title: Arbatax Park Resort - Suites Del Mare
-  id: arbatax-park-resort---suites-del-mare
-  location: Àrbatax, Sardegna
-  description: Soggiorno d’incanto in un resort 4* a picco sul blu della Sardegna
-  price: 425
-  price-description: per camera per notte
-  saved: 63
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73726/960100d5_f0ce_4382_96ff_20b561324f90.jpg
-  link: https://it.secretescapes.com/arbatax-park-resort-suites-del-mare-arbatax-sardegna2/sale
-  sale-id: 94519
-  domestic: true
-
 - title: La Suite Boutique Hotel
   id: la-suite-boutique-hotel
   location: Procida, Campania
@@ -35,7 +9,7 @@
   price: 131
   price-description: per camera per notte
   saved: 54
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95134/22f40907_88ba_43e3_b730_b922af7b7554.jpg
   link: https://it.secretescapes.com/la-suite-boutique-hotel-procida-campania/sale
   sale-id: 95134
@@ -48,7 +22,7 @@
   price: 105
   price-description: per camera per notte
   saved: 61
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95177/877e6f5b_4f43_4af8_9364_90ed231da2ae.jpg
   link: https://it.secretescapes.com/i-monasteri-golf-and-spa-resort-siracusa-sicilia/sale
   sale-id: 95177
@@ -58,44 +32,83 @@
   id: hotel-bad-fallenbach
   location: San Leonardo in Passiria, Trentino-Alto Adige
   description: Un 4*S green tra le meraviglie dell’Alto Adige, per un benessere ad alta quota
-  price: 229
+  price: 219
   price-description: per camera per notte
   saved: 46
-  expires: 2019/06/04
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74443/edd2d9c9_68a1_446e_9f20_ad720e154310.jpg
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/72152/9fa3897c_455d_4a72_9296_559c4bda204a.jpg
   link: https://it.secretescapes.com/hotel-bad-fallenbach-san-leonardo-in-passiria-trentino-alto-adige-it123/sale
   sale-id: 94973
+  domestic: true
+
+- title: Hotel Pulitzer
+  id: hotel-pulitzer
+  location: Roma, Lazio
+  description: Vivi la Dolce Vita in un raffinato 4* a Roma
+  price: 89
+  price-description: per camera per notte
+  saved: 40
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/57116/189425a6_932d_4e52_8b0b_a5880b0c8e64.jpg
+  link: https://it.secretescapes.com/hotel-pulitzer-roma-lazio-italia-roma/sale
+  sale-id: 95364
+  domestic: true
+
+- title: Le Massif
+  id: le-massif
+  location: Courmayeur, Valle d'Aosta
+  description: Soggiorno 5* a Courmayeur in un nuovo resort con area benessere
+  price: 122
+  price-description: per camera per notte
+  saved: 77
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95083/38a98b94_b9a4_4fe5_aec3_8a3478d7ef10.jpg
+  link: https://it.secretescapes.com/le-massif-courmayeur-valle-daosta/sale
+  sale-id: 95083
+  domestic: true
+
+- title: Relais Histo' San Pietro sul Mar Piccolo
+  id: relais-histo-san-pietro-sul-mar-piccolo
+  location: Taranto, Puglia
+  description: Vacanza relax sul mare di Taranto, in un'antica masseria con area benessere
+  price: 180
+  price-description: per camera per notte
+  saved: 54
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52996/95761db6_5a85_4a38_a82a_847e0e655eff.jpg
+  link: https://it.secretescapes.com/relais-histo-san-pietro-sul-mar-piccolo-taranto-puglia-italia/sale
+  sale-id: 94850
+  domestic: true
+
+- title: Elizabeth Lifestyle Hotel
+  id: elizabeth-lifestyle-hotel
+  location: Milano, Lombardia
+  description: Un boutique hotel a dieci minuti da Piazza Duomo, a Milano
+  price: 128
+  price-description: per camera per notte
+  saved: 57
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94756/4a76731b_3e89_49ae_b83d_28685a224108.jpg
+  link: https://it.secretescapes.com/elizabeth-lifestyle-hotel-milano-lombardia/sale
+  sale-id: 94756
+  domestic: true
+
+- title: Il Castelfalfi
+  id: il-castelfalfi
+  location: Montaione, Toscana
+  description: Pausa benessere a 5* nel cuore della Toscana
+  price: 208
+  price-description: per camera per notte
+  saved: 37
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52547/60e3d8f9_bffb_4293_a9de_7095b4dcabba.jpg
+  link: https://it.secretescapes.com/il-castelfalfi-montaione-toscana1/sale
+  sale-id: 94624
   domestic: true
 
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: Portals Hills Boutique Hotel
-  id: portals-hills-boutique-hotel
-  location: Maiorca
-  description: Estate 2019 in un esclusivo 5* a Maiorca, affacciato sulle acque cristalline del Mediterraneo
-  price: 195
-  price-description: per camera per notte
-  saved: 42
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
-  link: https://it.secretescapes.com/portals-hills-boutique-hotel-maiorca/sale
-  sale-id: 93893
-  domestic: false
-
-- title: H10 Casa de la Plata
-  id: h10-casa-de-la-plata
-  location: Siviglia, Spagna
-  description: Vivi il fascino di Siviglia da un nuovissimo 4* nel cuore della città
-  price: 84
-  price-description: per camera per notte
-  saved: 44
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94159/1bb36bfb_5f56_42cb_b8c6_d16e7460ed4c.jpg
-  link: https://it.secretescapes.com/h10-casa-de-la-plata-siviglia-spagna/sale
-  sale-id: 94159
-  domestic: false
 
 - title: The Ampersand Hotel
   id: the-ampersand-hotel
@@ -104,8 +117,8 @@
   price: 227
   price-description: per camera per notte
   saved: 45
-  expires: 2019/05/30
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94720/5fe64f55_c6f6_4142_9a53_0fc28cf1948b.jpg
+  expires: 2019/06/05
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94720/18cb899f_9595_4515_825f_7917662480e1.jpg
   link: https://it.secretescapes.com/the-ampersand-hotel-londra/sale
   sale-id: 94720
   domestic: false
@@ -117,23 +130,10 @@
   price: 149
   price-description: per camera per notte
   saved: 49
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg
   link: https://it.secretescapes.com/gpro-valparaiso-palace-hotel-and-spa-palma-di-maiorca-isole-baleari/sale
   sale-id: 95067
-  domestic: false
-
-- title: Bohemia Suites & Spa
-  id: bohemia-suites-and-spa
-  location: Gran Canaria, Isole Canarie
-  description: Uno splendido 5* per soli adulti con spa tra le meraviglie di Gran Canaria
-  price: 144
-  price-description: per camera per notte
-  saved: 23
-  expires: 2019/06/04
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9362/d78fa349_24c1_4f72_addd_b401bc657013.jpg
-  link: https://it.secretescapes.com/bohemia-suites-and-spa-gran-canaria-isole-canarie/sale
-  sale-id: 94708
   domestic: false
 
 - title: Seaside Los Jameos Playa
@@ -143,7 +143,7 @@
   price: 128
   price-description: per camera per notte
   saved: 27
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/83040/b12ed0e9_4ce7_4e15_9e92_4bd626e06714.jpg
   link: https://it.secretescapes.com/seaside-los-jameos-playa-lanzarote-isole-canarie2/sale
   sale-id: 94693
@@ -156,7 +156,7 @@
   price: 83
   price-description: per camera per notte
   saved: 42
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88953/4b3afadd_d23c_4fd8_a220_32caf459a489.jpg
   link: https://it.secretescapes.com/gara-suites-golf-and-spa-tenerife-canarie/sale
   sale-id: 94218
@@ -175,13 +175,80 @@
   sale-id: 94946
   domestic: false
 
-- title: Un'estate all-inclusive sotto il sole di Ibiza
-  location: Fergus Style Bahamas, Playa D'en Bossa
-  description: Sole, mare e spiagge chiarissime per la tua vacanza a Ibiza
-  price: 172
-  price-description: a persona. Basato su 2 persone per 2 notti
-  expires: 2019/06/01
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/94486/8bd13c07_84f8_47b3_867e_1a88f5898d9e.jpg?auto=format,compress
-  link: https://it.secretescapes.com/unestate-fantastica-a-ibiza-fergus-style-bahamas-ibiza-it/sale
-  sale-id: 94486
+- title: The Gates Hotel Diagonal
+  id: the-gates-hotel-diagonal
+  location: Barcellona, Spagna
+  description: Hotel super chic nel cuore di Barcellona, con vista panoramica sulla città
+  price: 89
+  price-description: per camera per notte
+  saved: 52
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86981/eee43634_14b3_4e54_8903_49002f727816.jpg
+  link: https://it.secretescapes.com/the-gates-hotel-diagonal-barcellona-spagna/sale
+  sale-id: 94489
+  domestic: false
+
+- title: The Walt Madrid
+  id: the-walt-madrid
+  location: Madrid
+  description: Un 4* di design nel cuore pulsante di Madrid
+  price: 105
+  price-description: per camera per notte
+  saved: 40
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88549/39983cf1_3d50_42af_812a_89cb00e5fa1a.jpg
+  link: https://it.secretescapes.com/the-walt-madrid-madrid2/sale
+  sale-id: 95133
+  domestic: false
+
+- title: Fergus Club Europa
+  id: fergus-club-europa
+  location: Maiorca
+  description: Vacanza all inclusive in un 4* family-friendly sul mare di Maiorca
+  price: 110
+  price-description: per camera per notte
+  saved: 43
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73722/2b559a4a_1b35_4bf2_9ffa_1b1590f7d98f.jpg
+  link: https://it.secretescapes.com/fergus-club-europa-maiorca/sale
+  sale-id: 95187
+  domestic: false
+
+- title: Finca Serena
+  id: finca-serena
+  location: Montuiri, Maiorca
+  description: Un casale luxury con spa da sogno nel cuore di Maiorca
+  price: 224
+  price-description: per camera per notte
+  saved: 41
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95288/9f34fef9_51da_40c8_aec7_68c510ebe87c.jpg
+  link: https://it.secretescapes.com/finca-serena-montuiri-maiorca/sale
+  sale-id: 95288
+  domestic: false
+
+- title: Elite Palace Hotel
+  id: elite-palace-hotel
+  location: Stoccolma
+  description: Un 4* d’élite nel cuore di Stoccolma, per un soggiorno di design
+  price: 74
+  price-description: per camera per notte
+  saved: 34
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91573/ed538f77_0945_46c3_8b03_09d402f28ad8.jpg
+  link: https://it.secretescapes.com/elite-palace-hotel-stoccolma2/sale
+  sale-id: 94907
+  domestic: false
+
+- title: Story Hotel Riddargatan
+  id: story-hotel-riddargatan
+  location: Stoccolma, Svezia
+  description: Un 4* di design per un city break nel cuore di Stoccolma
+  price: 103
+  price-description: per camera per notte
+  saved: 34
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/461d2da7_fec8_4cf0_9b3d_31f16cc3310a.jpg
+  link: https://it.secretescapes.com/story-hotel-riddargatan-stoccolma-svezia12/sale
+  sale-id: 95328
   domestic: false
